* Add `skipDataInit` argument to fuse.dom.Node.getFuseId(). [jddalton]

* Add clone(deep) methods to Array, Element, Hash, Object, Number, Range, String, and Template. [FuseJS LH #18] [jddalton, Joe Gornick]

* Add caching/decorating options to fuse.dom.Element create(), from(), fromElement(), fromHTML(), and fromId(). [jddalton]

* Rename fuse.dom.getFragmentFromString() to fuse.dom.getFragmentFromHTML(). [jddalton]

* Add fuse.dom.Element methods fromId() and fromHTML(). [jddalton]

* Remove fuse.get() and fuse.getById(). [jddalton]

* Optimize event findElement(), getPointerX(), and getPointerX() methods by reducing the number of elements that are decorated. [jddalton]

* Make the IE `dom:loaded` event only use the doScroll() technique when using less than IE8. [jddalton]

* Change argument order in dom traversal methods. [jddalton]
  New argument order for up/down/next/previous/first/last methods:
    (/* empty */)
    (count)
    (count, selector)
    (count, callback, thisArg)
    (selector)
    (callback, thisArg)

* Make the readyState poller for the dom:loaded event fire sooner and avoid the poller if the window is already loaded. [jddalton]

* Move toQueryString() and toQueryParam() methods to /lang/query.js and remove `parseQuery` alias. [jddalton]
  Note: Backwards compatibility warning.

* Rewrite fuse.ajax.responders and fuse.ajax.Request to use custom class events. [jddalton]

* Add support for custom events to fuse.Class via the fuse.Class.mixins.event mixin. [jddalton]

* Break array/object references on the prototype when calling a constructor that is defined with an `initialize` method on its prototype. [jddalton]

* Make fuse.Class automatically break array/object references assigned to the prototype of a constructor when using addPlugins() and addMixins(). [jddalton]

* Make fuse.Object.clone() work with Array, Boolean, Number, RegExp, and String objects. [jddalton]
